WIP touch bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kavoon&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:wght@100..900&family=Kavoon&display=swap');
 
 body {
-  background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), /* 70% opacity */
+  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), /* 70% opacity */
              url('../../public/marwin-colinayo-beauty-of-the-countryside.jpg') center/cover no-repeat;
   background-size: cover; /* Ensures the image covers the entire area */
   background-position: center; /* Centers the image */
